--- a/app/views/brackets/new.html.erb
+++ b/app/views/brackets/new.html.erb
@@ -2,13 +2,13 @@
 <div class="container">
     <div class="row">
         <div id="bracket_naming" class="span12 center">
-            <h1 id="bracket_instr">Name your bracket:</h1>
+            <h1 id="bracket_instr">Name your bracket</h1>
             <input id="bracket_name" value="" />
         </div>
     </div>
     <div class="row">
         <div class="span12 center">
-            <h1 id="bracket_instr">Begin by making your picks for round 1:</h1>
+            <h1 id="bracket_instr">Begin by making your picks for round 1</h1>
         </div>
     </div>
     <div class="row bracket-picker">
