--- a/app/views/home/landing.html.erb
+++ b/app/views/home/landing.html.erb
@@ -36,9 +36,7 @@
 			<div class="span9 step-description">
 				<h2>2. Pick your Winners and Create a Bracket</h2>
 				<p>
-					After Selection Sunday, March 17th, you can create one or more
-					"brackets." In other words, you can try to predict the winners of each
-					match in the NCAA Men's Basketball Tournament.
+					You can create one or more "brackets" to try to predict the winners of each match in the NCAA Men's Basketball Tournament.
 				</p>
 			</div>
 		</div>
@@ -50,8 +48,7 @@
 				<h2>3. Choose How Much You'd Like to Donate</h2>
 				<p>
 					The minimum donation for creating a bracket is $2, but you
-					can create as many brackets as you wish and donate as much as
-					you want. You can also donate directly without creating a bracket. 
+					can create as many brackets as you wish and donate as much as you want. You can also donate directly without creating a bracket. 
 				</p>
 			</div>
 		</div>
@@ -59,14 +56,10 @@
 			<div class="span9 offset3">
 				<h2>Additional Details</h2>
 				<p>
-					As the tournament progresses, you'll earn points for every prediction
-					you get right. We'll post a leaderboard of the users with the most
-					points.
+					As the tournament progresses, you'll earn points for every prediction you get right. We'll post a leaderboard of the users with the most points.
 				</p>
 				<p>
-					The proceeds will be divided in half. 50% will go toward research
-					on Sudden Infant Death Syndrome. The top 5 users will each get to
-					donate 10% of the proceeds to the charity of their choice.
+					The proceeds will be divided in half. 50% will go toward research on Sudden Infant Death Syndrome. The top 5 users will each get to donate 10% of the proceeds to the charity of their choice.
 				</p>
 			</div>
 		</div>
