about me changes

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,8 +1,8 @@
 
 	<section class="center" id="mission">
-		<div class="container-fluid">
+		<div class="container">
 			<div class="row-fluid">
-				<div class="span8 offset2">
+				<div class="span12">
 					<div class="hero">
 						<h1>Our Mission</h1>
 						<p>Brackets 4 Life applies the energy of March Madness to take steps towards finding a cure for SIDS. SIDS research needs more funding and one way to achieve this is through efforts like Brackets 4 Life. If you're interested, you can check out some <a href="http://www.cjsids.org/resource-center/sids-research/recent-research.html">current research studies</a>.</p>
@@ -14,9 +14,9 @@
 	</section>
 
 	<section class="dark center" id="story">
-		<div class="container-fluid">
+		<div class="container">
 			<div class="row-fluid">
-				<div class="span8 offset2">
+				<div class="span12">
 					<div class="hero">
 						<h1>Our Stories</h1>
 					</div>
@@ -48,9 +48,9 @@
 	</section>
 
 	<section class="center" id="team">
-		<div class="container-fluid">
+		<div class="container">
 			<div class="row-fluid">
-				<div class="span8 offset2">
+				<div class="span12">
 					<div class="hero">
 						<h1>Our Team</h1>
 					</div>
