Add 2013 teams to database.

--- a/app/views/brackets/new.html.erb
+++ b/app/views/brackets/new.html.erb
@@ -8,7 +8,8 @@
     </div>
     <div class="row">
         <div class="span12 center">
-            <h1 id="bracket_instr">Begin by making your picks for round 1</h1>
+            <h1 id="bracket_instr">Begin by predicting the winners of round 1</h1>
+            <p>Click a team to choose it as a winner. The winner you have chosen for each match will display on the right.</p>
         </div>
     </div>
     <div class="row bracket-picker">
