Add a note about not being able to edit a bracket once you create it.

--- a/app/views/brackets/new.html.erb
+++ b/app/views/brackets/new.html.erb
@@ -10,6 +10,7 @@
         <div class="span12 center">
             <h1 id="bracket_instr">Begin by predicting the winners of round 1</h1>
             <p>Click a team to choose it as a winner. The winner you have chosen for each match will display on the right.</p>
+            <p><strong>Choose carefully! Once you have finished your bracket, you will not be able to edit it.</strong><br/><br/></p>
         </div>
     </div>
     <div class="row bracket-picker">
