Add note for internet explorer users due to unexpected bugs. We will fix the ie bugs eventually

--- a/app/views/home/landing.html.erb
+++ b/app/views/home/landing.html.erb
@@ -1,3 +1,7 @@
+<% if browser.ie? %>
+	<div class="notice center">Warning: You appear to be using Internet Explorer. For the best experience we suggest using Safari, Firefox, or Chrome.</div>
+<% end %>
+
 <section class="center" id="landing-video">
 	<div class="container">
 		<div class="hero landing-hero">
