Change default additional donation to

--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -4,7 +4,7 @@
 			<div class="row">
 				<div class="span12">
 					<h1>You are almost done!</h1>
-					<h2>The last step is to donate $2.00 to activate your bracket</h2>
+					<h2>The last step is to make a donation to activate your bracket</h2>
 				</div>
 			</div>
 			<div class="row">
@@ -15,7 +15,7 @@
 						<label>Additional Donation</label>
 							<select class="opts">
 								<option value="0">$0</option>
-								<option value="5">$5</option>
+								<option value="5" selected="selected">$5</option>
 								<option value="10">$10</option>
 								<option value="20">$20</option>
 								<option value="50">$50</option>
@@ -31,7 +31,7 @@
 					  <input id="payment_amt" name="payment_amt" type="hidden" value="" />
 					  <article>
 					    <label class="amount">
-					      <span id="amt_shown">Total: $2.00</span>
+					      <span id="amt_shown">Total: $7.00</span>
 					    </label>
 					  </article>
 
