--- a/app/assets/stylesheets/about_us.css.scss
+++ b/app/assets/stylesheets/about_us.css.scss
@@ -196,6 +196,10 @@
 	background-image: url(../img/profile/dimeji.jpg);
 }
 
+.ch-img-14{
+	background-image: url(../img/profile/farrukh.jpg);
+}
+
 .ch-info {
 	position: absolute;
 	width: 100%;
