--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -153,6 +153,13 @@
 									</div>
 								</div>
 							</li>
+							<li>
+								<div class="ch-item ch-img-14">
+									<div class="ch-info">
+										<h3>Farrukh Jadoon</h3>
+									</div>
+								</div>
+							</li>
 						</ul>
 					</section>
 				</div>
