Change bracket index page to include notice about unactive brackets and a link to activate them.

--- a/app/assets/stylesheets/brackets_index.css.scss
+++ b/app/assets/stylesheets/brackets_index.css.scss
@@ -13,9 +13,8 @@
 }
 
 .brackets-header {
-	margin-top: 15px;
-	margin-bottom: 15px;
-
+	margin-top: 0px;
+	margin-bottom: 30px;
 }
 
 .new-bracket-button {
@@ -42,6 +41,9 @@
 }
 
 .bracket-link {
-		color:#393939;
-	margin-left: 10px;
+	color:#393939;
+}
+
+.unactive-brackets {
+	
 }
