--- a/app/views/brackets/index.html.erb
+++ b/app/views/brackets/index.html.erb
@@ -1,30 +1,57 @@
 
 <div class="clearfix"></div>
 <div class="brackets-index">
-	<div class="container-fluid">
-		<div class="row-fluid">
-			<div class="span12 center brackets-header">
-				<div class="clearfix"></div>
-				<% if !@brackets.empty? %>
-				<div class="center">
-					<div class="hero">
-						<h1>My Brackets</h1>
+		
+		<% if !@brackets.empty? %>
+		<div class="container">
+			
+			<div class="brackets-header">
+				<div class="row">
+					<div class="span12 center">
+						<div class="clearfix"></div>
+						<div class="center">
+							<h1>Brackets</h1>
+						</div>
 					</div>
+				</div>
+
+				<% if @brackets.where(:active => false).count > 0 %>
+				<div class="row">
+					<div class="span8 offset2 unactive-brackets">
+							<p>
+								It looks like you have some brackets that are not active. To activate a bracket,
+								you must make a minimum donation of $2. Unactive brackets will not be eligible to
+								win the contest.
+							</p>
+					</div>
+				</div>
+				<% end %>
+			</div>
+			
+			<div class="row">
+				<div class="span12 center">
 					<table class="table center table-bordered brackets-table">
 						<tr>
-							<th>
-								<h4 class="center cursive">Awesome! You've created <%= pluralize @brackets.count, "Bracket" %>!</h4>
-							</th>
+							<th class="center">Name</th>
+							<th class="center">Active?</th>
+							<th class="center">Controls</th>
 						</tr>
 						<% @brackets.each do |b| %>
 						<tr>
 							<td>
 								<%= link_to b.name, b, :class => "bracket-link" %>
-								<div class="pull-right">
-									<%= link_to bracket_path(b), :method => "delete", :confirm => "Are you sure you want to delete the bracket called #{b.name}? If you have already donated, we cannot issue a refund.", :class=> "bracket-delete-button" do %>
-									<i class="icon-remove"></i> &nbsp; delete
-									<% end %>
-								</div>
+							</td>
+							<td class="center">
+								<% if b.active %>
+									<i class="icon icon-ok"></i>
+								<% else %>
+									<%= link_to "activate now!", new_bracket_payment_path(b) %>
+								<% end %>
+							</td>
+							<td class="center">
+								<%= link_to bracket_path(b), :method => "delete", :confirm => "Are you sure you want to delete the bracket called #{b.name}? If you have already donated, we cannot issue a refund.", :class=> "bracket-delete-button" do %>
+								delete
+								<% end %>
 							</td>
 						</tr>
 						<% end %>
@@ -33,22 +60,28 @@
 					<%= link_to "Create Another Bracket", new_bracket_path, :class => "button button-primary center new-bracket-button cursive" %>
 					<div class="clearfix"></div>
 				</div>
-				<% else %>
-				<div class="hero center">
-					<h1>Welcome to Brackets for Life!</h1>
-				</div>
-				<section class="dark center">
-					<h2 class="hero">My Brackets</h2>
-					<h3>Oh darn, It seems like you don't have a bracket!</h3>
-					<h3>Why don't you make one now?</h3>
-					<br><br>
-					<div class="clearfix"></div>
-					<%= link_to "Create a Bracket", new_bracket_path, :class => "button button-primary center new-bracket-button cursive" %>
-					<div class="clearfix"></div>
-				</section>
-				<% end %>
 			</div>
+
 		</div>
+		<% else %>
+			
+			<div class="row">
+					<div class="hero center">
+						<h1>Welcome to Brackets for Life!</h1>
+					</div>
+					<section class="dark center">
+						<h2 class="hero">My Brackets</h2>
+						<h3>Oh darn, It seems like you don't have a bracket!</h3>
+						<h3>Why don't you make one now?</h3>
+						<br><br>
+						<div class="clearfix"></div>
+						<%= link_to "Create a Bracket", new_bracket_path, :class => "button button-primary center new-bracket-button cursive" %>
+						<div class="clearfix"></div>
+					</section>
+				</div>
+			</div>
+
+	<% end %>
 
 	</div>
 </div>
