--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -42,11 +42,12 @@ body{
   position: relative;
   top: 0px;
 }
-.notice, .alert{
+.notice, .alert, .devise-errors{
   color: #000000;
   text-align: center;
   background-color: #cccccc;
   padding: 2px 2px 2px 2px;
+  border: none;
 }
 footer{
   padding:40px 0 30px 0;
@@ -65,9 +66,5 @@ h1.huge {
 
 *.center {
   text-align: center !important;
-}
-
-.notice {
-  padding: 12px;
 }
 
