--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -49,6 +49,11 @@ body{
   padding: 2px 2px 2px 2px;
   border: none;
 }
+p{
+  .notice{
+    margin: none;
+  }
+}
 footer{
   padding:40px 0 30px 0;
 }
