--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -46,13 +46,9 @@ body{
   color: #000000;
   text-align: center;
   background-color: #cccccc;
-  padding: 2px 2px 2px 2px;
+  padding: 5px 2px 5px 2px;
   border: none;
-}
-p{
-  .notice{
-    margin: none;
-  }
+  margin: 0px;
 }
 footer{
   padding:40px 0 30px 0;
@@ -72,4 +68,3 @@ h1.huge {
 *.center {
   text-align: center !important;
 }
-
