--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -49,6 +49,9 @@ body{
   padding: 5px 2px 5px 2px;
   border: none;
   margin: 0px;
+  p{
+    margin: 0px;
+  }
 }
 footer{
   padding:40px 0 30px 0;
