--- a/app/views/home/landing.html.erb
+++ b/app/views/home/landing.html.erb
@@ -7,6 +7,7 @@
 		<div class="hero landing-hero">
 			<h1>Create a bracket and help fight against Sudden Infant Death Syndrome!</h1>
 			<%= link_to "Get Started", '#signups', :'data-toggle' => 'modal', :class => "button button-primary landing-button cursive"%>
+			<%= link_to "Donate", '/donations/new', :class => "button button-primary landing-button cursive"%>
 		</div>
 		<div class="video" rel="tooltip" data-placement="right">
 			<iframe src="https://player.vimeo.com/video/61319484?title=0&byline=0&portrait=0&color=0088cc" width="400" height="300" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
