--- a/app/assets/stylesheets/payments.css.scss
+++ b/app/assets/stylesheets/payments.css.scss
@@ -6,4 +6,16 @@
 .additional-donation-form {
 	margin-top: 60px;
 	margin-bottom: 60px;
+	h3{
+		font-size: 20px;
+	}
+}
+
+.donation-form {
+	margin-top: 60px;
+	margin-bottom: 60px;
+}
+
+h4{
+	font-weight: 300;
 }
