--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -4,14 +4,14 @@
 			<div class="row">
 				<div class="span12">
 					<h1>You are almost done!</h1>
-					<h2>The last step is to make a donation to activate your bracket</h2>
+					<h4>The last step is to make a donation to activate your bracket.</h4>
 				</div>
 			</div>
 			<div class="row">
 				<div class="span12">
 					<div class="selDiv">
-						<h4>Please consider donating an additional amount to help fund research for Sudden Infant Death Syndrome</h4>
 						<form class="additional-donation-form">
+							<h3>Please consider donating an additional amount to help fund research for Sudden Infant Death Syndrome.</h3>
 						<label>Additional Donation</label>
 							<select class="opts">
 								<option value="0">$0</option>
@@ -35,7 +35,7 @@
 					    </label>
 					  </article>
 
-					  <button id="customButton" class="btn-success btn">Donate</button>
+					  <button id="paymentButton" class="btn-success btn">Donate</button>
 
 					<% end %>
 				</div>
