--- a/app/views/donations/new.html.erb
+++ b/app/views/donations/new.html.erb
@@ -2,16 +2,17 @@
 	<section class="center" id="mission">
 		<div class="container">
 			<div class="row">
-				<div class="span8 offset2">
-					<h1>Thank you for supporting SIDS Research</h1>
+				<div class="span12">
+					<h1>Thank you for supporting SIDS Research!</h1>
 					<h2></h2>
-					<h4>Every donation will bring us one step closer to finding a cure for Sudden Infant Death Syndrome</h4>
+					<h4>Every donation will bring us one step closer to finding a cure for Sudden Infant Death Syndrome.</h4>
 				</div>
 			</div>
 			<div class="row">
-				<div class="span5 offset4">
+				<div class="span12">
 					<div class="selDiv">
-						<label>Donation Amount</label>
+						<form class="donation-form">
+						<label>Amount</label>
 						<select class="opts_donate">
 							<option value="5">$5</option>
 							<option value="10">$10</option>
@@ -22,19 +23,17 @@
 							<option value="1000">$1,000</option>
 							<option value="5000">$5,000</option>
 						</select>
+						</form>
 					</div>
 					<%= form_tag donations_path do %>
 					  <input id="stripe_token" name="stripeToken" type="hidden" value="" />
 					  <input id="payment_amt" name="payment_amt" type="hidden" value="" />
 					  <article>
 					    <label class="amount">
-					      <label>Total</label>
-					      <span id="amt_shown">Amount: $5.00</span>
+					      <span id="amt_shown">Total: $5.00</span>
 					    </label>
 					  </article>
-
-					  <button id="customButton" class="btn-success btn">Donate</button>
-
+					  <button id="donateButton" class="btn-success btn">Donate</button>
 					<% end %> 
 				</div>
 			</div>
