--- a/app/views/brackets/show.html.erb
+++ b/app/views/brackets/show.html.erb
@@ -12,6 +12,7 @@
 	<div class="row">
 		<div class="span12">
 			<h1 class="center bracket-name"><%= @bracket.name %></h1>
+			<h4 class="center bracket-score">Score: <%= @bracket.score %></h4>
 		</div>
 	</div>
 </div>
