landing page update

--- a/app/views/home/landing.html.erb
+++ b/app/views/home/landing.html.erb
@@ -63,7 +63,7 @@
 			<div class="span9 offset3">
 				<h2>Additional Details</h2>
 				<p>
-					As the tournament progresses, you'll earn points for every prediction you get right. We'll post a leaderboard of the users with the most points.
+					As the tournament progresses, you'll earn points for every prediction you get right. We'll inform everyone of the top 5 winners by email when the tournament comes to a close.
 				</p>
 				<p>
 					The proceeds will be divided in half. 50% will go toward research on Sudden Infant Death Syndrome. The top 5 users will each get to donate 10% of the proceeds to the charity of their choice.
